--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,15 @@
 {
- "name": "App",
+"short_name": "Steel Explorer",
+ "name": "Steel Explorer by Jon Sadka",
  "icons": [
-  {
-   "src": "\/steel-explorer\/icons\/android-icon-192x192.png",
-   "sizes": "192x192",
-   "type": "image\/png",
-   "density": "4.0"
-  }
- ]
+    {
+    "src": "\/steel-explorer\/icons\/android-icon-192x192.png",
+    "sizes": "192x192",
+    "type": "image\/png",
+    "density": "4.0"
+    }
+  ],
+  "display": "standalone",
+  "theme_color": "#3B4C7A",
+  "background_color": "#D8D8D8"
 }
