--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
  "name": "Steel Explorer by Jon Sadka",
  "icons": [
     {
-    "src": "\/steel-explorer\/icons\/android-icon-192x192.png",
+    "src": "icons\/android-icon-192x192.png",
     "sizes": "192x192",
     "type": "image\/png",
     "density": "4.0"
