--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,11 @@
 {
-"short_name": "Steel Explorer",
- "name": "Steel Explorer by Jon Sadka",
- "icons": [
+  "short_name": "Steel Explorer",
+  "name": "Steel Explorer by Jon Sadka",
+  "icons": [
     {
-    "src": "icons\/android-icon-192x192.png",
-    "sizes": "192x192",
-    "type": "image\/png",
-    "density": "4.0"
+      "src": "icons/android-icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
     }
   ],
   "display": "standalone",
